tests/snapshots/examples_fixtures/imports__import_in_function_error.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/imports/import_in_function_error.flx
== compile ==
failed (compile)
== diagnostics ==
error[E017]: Import Scope

Import statements must be at the top of the file.

  examples/imports/import_in_function_error.flx:7:5
  |
7 |     import Modules.Math
  |     ^^^^^^^^^^^^^^^^^^^

Hint:
  Move all import statements before any other declarations.


error[E013]: Module Not Imported

Module `Math` is not imported.

  examples/imports/import_in_function_error.flx:8:11
  |
8 |     print(Math.square(5));
  |           ^^^^^^^^^^^

Hint:
  Add an import statement at the top of your file: `import Math`. You can also use an alias: `import {} as ShorterName`. Remember: imports must be at the top, before any other code.

Found 2 errors.
== stdout ==
<not executed>
